--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "bootstrap-4-react": "^0.0.59",
+    "form-data": "^4.0.0",
     "gh-pages": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
