--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@emotion/core": "^10.1.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.10.14",
     "@mui/x-date-pickers": "^5.0.8",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "bootstrap-4-react": "^0.0.59",
+    "font-awesome": "^4.7.0",
     "form-data": "^4.0.0",
     "gh-pages": "^4.0.0",
     "lodash": "^4.17.21",
